[workspace]
members  = [
    "contracts/nft/earlybirds/*",
    "contracts/nft/factories/*",
    "contracts/nft/minters/*",
    "contracts/revenue/*",
    "packages/actions/*",
    "packages/nft/*",
    "packages/revenue/*",
    "packages/utils/*",
    "e2e",
    ]

resolver = "2"

[workspace.package]
version    = "0.2.0"
edition    = "2021"
homepage   = "https://terp.network"
repository = "https://github.com/terpnetwork/core-cosmwasm"
license    = "Apache-2.0"

[workspace.dependencies]
terp-fair-burn = { path = "contracts/revenue/fair-burn", features = ["library"] }
terp-residual-registry = { path = "contracts/revenue/residual-registry", features = ["library",] }
terp-splits                = { version = "0.2.0", path = "contracts/revenue/splits" }
auction                    = { version = "0.2.0", path = "contracts/revenue/auction" }
base-factory               = { version = "0.2.0", path = "contracts/nft/factories/base-factory" }
vending-factory            = { version = "0.2.0", path = "contracts/nft/factories/vending-factory", features = ["library"] }
open-edition-factory       = { version = "0.2.0", path = "contracts/nft/factories/open-edition-factory", features = ["library"] }
base-minter                = { version = "0.2.0", path = "contracts/nft/minters/base-minter" }
vending-minter             = { version = "0.2.0", path = "contracts/nft/minters/vending-minter" }
open-edition-minter        = { version = "0.2.0", path = "contracts/nft/minters/open-edition-minter" }
earlybird-immutable        = { version = "0.2.0", path = "contracts/nft/earlybirds/earlybird-immutable" }
earlybird-flex             = { version = "0.2.0", path = "contracts/nft/earlybirds/earlybird-flex" }
earlybird                  = { version = "0.2.0", path = "contracts/nft/earlybirds/earlybird" }
ethereum-verify            = { version = "0.2.0", path = "packages/actions/ethereum-verify" }
terp-code-controllers      = { version = "0.2.0", path = "packages/actions/controllers" }
terp-metadata              = { version = "0.2.0", path = "packages/nft/terp-metadata" }
terp-mint-hooks            = { version = "0.2.0", path = "packages/actions/mint-hooks" }
terp-index-query           = { version = "0.2.0", path = "packages/actions/terp-index-query" }
factory-utils              = { version = "0.2.0", path = "packages/nft/factory-utils" }
minter-utils               = { version = "0.2.0", path = "packages/nft/minter-utils" }
terp-sdk                   = { version = "0.2.0", path = "packages/utils/terp-sdk" }
terp-fee                   = { version = "0.2.0", path = "packages/revenue/terp-fee" }
terp-marketplace-utils     = { version = "0.2.0",  path = "packages/revenue/marketplace" }


cosmwasm-schema  = "2.2.2"
cosmwasm-std     = {version = "2.2.2", features = ["stargate","cosmwasm_1_4"] }
rust_decimal    = { version = "1.14.3" }
cosmwasm-storage = "1.5.2"
cw-storage-macro = "2.0.0"
cw-storage-plus  = "2.0.0"
cw-controllers  = "2.0.0"
cw2            = "2.0.0"
cw4           = "2.0.0"
cw20             = "2.0.0"
cw4-group        = "2.0.0"
cw721            = {version = "0.20.0",  branch = "main", "git" = "https://github.com/public-awesome/cw-nfts"}
cw721-base        = {version = "0.20.0",  branch = "main", "git" = "https://github.com/public-awesome/cw-nfts"}
cw721-nt         = {package = "cw721-non-transferable", version = "0.20.0",  branch = "main", "git" = "https://github.com/public-awesome/cw-nfts"}
cw-asset = "4.0.0"
cw-utils         = "2.0.0"
cw-ownable       = "2.1.0"
schemars         = "0.8.22"
semver           = "1.0.26"
serde            = { version = "1.0.219", default-features = false, features = ["derive"] }
sha2             = { version = "0.10.8", default-features = false }
thiserror        = "2.0.12"
anyhow           = "1.0.97"

# dev-dependencies
cw-multi-test    = {version = "2.3.2",features=  ["cosmwasm_1_2"]}
test-suite       = { version = "0.2.0", path = "test-suite" }
assert_matches   = "1.5"
serde_json       = "1.0"
env_logger       = "0.9.0"
test-context     = "0.1.4"
once_cell        = "1.13.0"
rand             = "0.8"
itertools        = "0.10.5"
mockall          = "0.11.4"
url              = "2.2.2"

[profile.release.package.terp-fee]
codegen-units = 1
incremental   = false

[profile.release.package.factory-utils]
codegen-units = 1
incremental   = false

[profile.release.package.minter-utils]
codegen-units = 1
incremental   = false

[profile.release.package.earlybird]
codegen-units = 1
incremental   = false

[profile.release.package.base-factory]
codegen-units = 1
incremental   = false

[profile.release.package.base-minter]
codegen-units = 1
incremental   = false

# [profile.release.package.ethereum]
# codegen-units = 1
# incremental   = false

[profile.release.package.vending-factory]
codegen-units = 1
incremental   = false

[profile.release.package.vending-minter]
codegen-units = 1
incremental   = false

[profile.release.package.terp-splits]
codegen-units = 1
incremental   = false

[profile.release.package.earlybird-immutable]
codegen-units = 1
incremental   = false

[profile.release.package.earlybird-flex]
codegen-units = 1
incremental   = false

[profile.release.package.test-suite]
codegen-units = 1
incremental   = false


[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
